# 0026_rettimbus_ekaf_submission

./: INSTRUCTIONS.md  README.md  benchmark_config.yaml  id.yaml  report.yaml  system_info.yaml
docs/: building.md  running.md
reports/: logistic_regression_polyd3_242_features_5-wp_242_16384_6_45_45_36-offline-float64-1120-all_cipher-ckks-128_bits-1-report.csv  logistic_regression_polyd3_242_features_5-wp_242_16384_6_45_45_36-offline-float64-1120-all_cipher-ckks-128_bits-1-stats.csv
source/: CMakeLists.txt
source/src/benchmarks/ckks/: seal_ckks_logreg_horner.cpp
source/src/engine/: seal_engine.cpp
